Move to EJS for site templating. Wire up SQRL URL to login page

--- a/src/testSite/views/layout.ejs
+++ b/src/testSite/views/layout.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SQRL Test Site</title>
+  <title>SQRL Test Site - <%= subpageName %></title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,6 +11,6 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <%- body %>
 </body>
 </html>
