Prepare for external SQRL client login against test site: - Get external port open on test site by binding to the first local IP address - Fix /login page polling and improve UI to make it clearer polling is going on - Fix nut table query - Set SQRL to secure: true even though the site is not https - desktop SQRL client does not register qrl:// for interception.   The site cannot be logged-into because the client converts sqrl:// to https:// which requires the test site to be https.   That change to follow.

--- a/src/testSite/views/layout.ejs
+++ b/src/testSite/views/layout.ejs
@@ -9,6 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <link rel="stylesheet" href="styles.css">
+
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 </head>
 <body>
   <%- body %>
