--- a/src/testSite/WebSite/styles.css
+++ b/src/testSite/WebSite/styles.css
@@ -10,7 +10,7 @@ h2, h3 {
   font-weight: lighter;
 }
 body {
-  margin: 0;
+  margin: 5px;
   background-color: #FFF;
 }
 body, input[text], button {
