Improve logging and extract an interface for storage

--- a/src/testSite/views/login.ejs
+++ b/src/testSite/views/login.ejs
@@ -40,6 +40,6 @@
   Welcome! Please log in with SQRL by scanning or clicking the QR code below.
 </p>
 <p>
-  <a class="qr-code" href="<%= sqrlUrl %>"><%- sqrlQR %></a>
+  <a class="qr-code" href="<%= sqrlUrl %>" title="<%= sqrlUrl %>"><%- sqrlQR %></a>
 </p>
 <p id="login-text">Status...</p>
