Upgrade test site with CSP header and HTTP->HTTPS redirect Includes breaking out site scripts from inline into .js files to avoid generating CSP nonces

--- a/src/testSite/views/index.ejs
+++ b/src/testSite/views/index.ejs
@@ -1,8 +1,4 @@
-<script>
-  $(document).ready(() => {
-    $('#current-cookie').text(`Current document.cookie value: ${document.cookie}`);
-  });
-</script>
+<script src="/Scripts/Index.js"></script>
 <p>
   You are logged in as user <%= username %> with SQRL site-specific
   public key <%= sqrlPublicKey %> .
