--- a/src/testSite/views/login.ejs
+++ b/src/testSite/views/login.ejs
@@ -1,43 +1,4 @@
-<script>
-  const nutCheckIntervalMsec = 1000;
-  const spinChars = [ '|', '/', '-', '\\' ];
-  let spinIndex = 0;
-
-  $(document).ready(() => {
-    // Poll the back-end to see if a phone login has occurred.
-    setTimeout(pollNut, nutCheckIntervalMsec);
-  });
-
-  function resetLoginText() {
-    spinIndex = (spinIndex + 1) % spinChars.length;
-    $('#login-text').text(spinChars[spinIndex]);
-    setTimeout(pollNut, nutCheckIntervalMsec / 2);
-  }
-
-  function pollNut() {
-    spinIndex = (spinIndex + 1) % spinChars.length;
-    $('#login-text').text(spinChars[spinIndex] + ' Polling nut /pollNut/<%= sqrlNut %>');
-    $.get({
-      url: "/pollNut/<%= sqrlNut %>",
-      cache: false,
-      error: (jqXHR, textStatus, errorThrown) => {
-        $("#login-text").text(`ERROR getting nut status: ${textStatus}: ${errorThrown}`);
-        setTimeout(resetLoginText, nutCheckIntervalMsec / 2);
-      },
-      success: (data, textStatus, jqXHR) => {
-        // Store the login cookie value and Redirect the page if the nut was logged in.
-        // Data is a NutPollResult
-        if (data && data.loggedIn) {
-          $("#login-text").text(`Success! Browser stored updated cookie containing session. Redirecting to ${data.redirectTo} in a few seconds`);
-          setTimeout(() => window.location.href = data.redirectTo, 4000);
-        } else {
-          // Normal case: No login.
-          setTimeout(resetLoginText, nutCheckIntervalMsec / 2);
-        }
-      }
-    });
-  }
-</script>
+<script src="/Scripts/Login.js"></script>
 <p>
   Welcome! Please log in with SQRL by scanning or clicking the QR code below.
 </p>
@@ -45,3 +6,4 @@
   <a class="qr-code" href="<%= sqrlUrl %>" title="<%= sqrlUrl %>"><%- sqrlQR %></a>
 </p>
 <p id="login-text">Status...</p>
+<div id="sqrl-nut" hidden><%= sqrlNut %></div>
